# sound-transfer-veilid-key

./: .gitignore  CLAUDE.md  README.md
ggwave_ffi/: README.md  ffigen.yaml  pubspec.yaml
ggwave_ffi/android/: build.gradle  settings.gradle
ggwave_ffi/android/src/main/: AndroidManifest.xml
ggwave_ffi/example/: README.md  pubspec.yaml
ggwave_ffi/example/android/app/: build.gradle.kts
ggwave_ffi/example/android/app/src/main/: AndroidManifest.xml
ggwave_ffi/example/android/app/src/main/kotlin/com/example/ggwave_ffi_example/: MainActivity.kt
ggwave_ffi/example/ios/Runner/: Info.plist
ggwave_ffi/example/ios/Runner.xcodeproj/: project.pbxproj
ggwave_ffi/example/lib/: main.dart
ggwave_ffi/example/lib/screens/: receive_screen.dart  send_screen.dart
ggwave_ffi/ios/: ggwave_ffi.podspec
ggwave_ffi/ios/Classes/: ggwave_ffi.h
ggwave_ffi/lib/: ggwave_ffi.dart  ggwave_ffi_bindings_generated.dart
ggwave_ffi/src/: CMakeLists.txt  ggwave_ffi.c
